--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,14 @@
 <div class="top-menu">
 
-    <img class="logo"
-         src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
+  <img class="logo" src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
 
 </div>
 
-
+<!-- template interpolation syntax: {{ xyz }}-->
 <div class="courses">
-
-    <course-card></course-card>
-    <course-card></course-card>
-    <course-card></course-card>
+<!-- Angular syntax for input uses [] -->
+  <course-card [course]="coreCourse"></course-card>
+  <course-card [course]="rxjsCourse"></course-card>
+  <course-card [course]="ngrxCourse"></course-card>
 
 </div>
-
-
