Followed along tutorial, broke everything

--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,9 +1,8 @@
-<p>course-card works!</p>
 
-<div class="course-card">
+<div  class="course-card">
 
   <div class="course-title">
-      {{ course.title }}
+      {{ card.Index + ' ' + course.description}}
   </div>
   <img width="300" alt="Angular Logo"
        [src]="course.iconUrl">
