--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,6 @@
 <!-- template interpolation syntax: {{ xyz }}-->
 <div class="courses">
 <!-- Angular syntax for input uses [] -->
-  <course-card [course]="coreCourse"></course-card>
-  <course-card [course]="rxjsCourse"></course-card>
-  <course-card [course]="ngrxCourse"></course-card>
+  <course-card *ngFor="let course of courses;index as i;"></course-card>
 
 </div>
